# kdal

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dev  Kconfig  Makefile  README.md  SECURITY.md  SKILL.md  class.dtso
.github/project/: DESCRIPTION.md
.github/templates/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  kernel_port.md  kernel_port.yml  pull_request.md
.github/workflows/: build.yml  ci.yml  codeql.yml  docs.yml  e2e.yml  nightly.yml  release.yml  test.yml
cmake/: CompileKDC.cmake  FindKDAL.cmake  KDALConfig.cmake  KDALConfigVersion.cmake  KDALPackaging.cmake  KDALTargets-installed.cmake  KDALTargets.cmake  KDALTesting.cmake  KDALToolchain.cmake  cmake_uninstall.cmake.in
compiler/: CMakeLists.txt  Makefile  codegen.c  kdalc  lexer.c  main.c  parser.c  sema.c
compiler/include/: ast.h  codegen.h  token.h
docs/: api_reference.md  architecture.md  faq.md  installation.md  language_guide.md  performance.md  portingguide.md  thesis.md  upstreaming.md
editor/vim/vim-kdal/: README.md  filetype.lua  install-vim.sh
editor/vim/vim-kdal/compiler/: kdalc.vim  kdality.vim
editor/vim/vim-kdal/ftdetect/: kdal.vim
editor/vim/vim-kdal/ftplugin/: kdc.vim  kdh.vim
editor/vim/vim-kdal/plugin/: kdal.vim
editor/vim/vim-kdal/syntax/: kdc.vim  kdh.vim
editor/vscode/kdal-lang/: .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editor/vscode/kdal-lang/snippets/: kdc.json  kdh.json
editor/vscode/kdal-lang/src/: commands.ts  extension.ts  statusBar.ts  taskProvider.ts  toolchain.ts
editor/vscode/kdal-lang/syntaxes/: kdc.tmLanguage.json  kdh.tmLanguage.json
examples/accel_demo/: gpudemo.c  npudemo.c
examples/kdc_hello/: README.md  i2c_sensor.kdc  uart_hello.kdc  uart_hello.kdh
examples/minimaldriver/: Makefile  driver.c
include/kdal/: backend.h  ioctl.h  types.h
include/kdal/api/: accel.h  common.h  driver.h
include/kdal/core/: kdal.h  version.h
init/: Makefile  README.md  init.kdc  init.kdh
lang/: DESIGN.md  spec.md
lang/grammar/: kdc.ebnf  kdh.ebnf
lang/stdlib/: common.kdh  gpio.kdh  gpu.kdh  i2c.kdh  npu.kdh  spi.kdh  uart.kdh
packaging/debian/: changelog  control  copyright  kdal-dev.install  kdal.install  rules
packaging/debian/source/: format
packaging/homebrew/: kdal.rb
packaging/rpm/: kdal.spec
scripts/ci/: checkpatch.sh  coverage.sh  static_analysis.sh  test.sh  test_packaging.sh
scripts/dev/: build.sh  codeql.sh  common.sh  install-hooks.sh  run.sh  test.sh
scripts/dev/hooks/: commit-msg
scripts/devsetup/: install_deps.sh
scripts/e2e/: lib.sh  run_all.sh  test_compiler.sh  test_developer_journey.sh  test_editor_support.sh  test_packaging.sh  test_release.sh  test_user_journey.sh  test_website.sh
scripts/env/: debug.sh  dependencies.sh  kernel.sh  prepare.sh  run.sh
scripts/installer/: install.sh  kdalup.sh
scripts/release/: bump_version.sh  bumpversion.sh  generate_changelog.sh  release.sh  update_homebrew_sha.sh
scripts/release/templates/: release-commit.txt  release-tag.txt
scripts/setupqemu/: buildkernel.sh  debug.sh  prepare.sh  run.sh
src/backends/generic/: devicetree.c  platdev.c  socglue.c
src/backends/qemu/: mmio.c  qemubackend.c  virtioaccel.c  virtioio.c
src/core/: chardev.c  debugfs.c  event.c  kdal.c  module.c  power.c  registry.c
src/drivers/example/: gpudriver.c  i2cdriver.c  spidriver.c  uartdriver.c
tests/integration/: kdaltest.c
tests/kunit/: test_accel.c  test_core.c  test_driver.c  test_event.c  test_registry.c
tests/userspace/: benchmark.c  testapp.c
tools/kdality/: Makefile  compile.c  dtgen.c  init.c  kdalctl.c  kdality  lint.c  main.c  simulate.c  templates.h  testgen.c
website/: .gitignore  astro.config.mjs  package-lock.json  package.json
website/src/content/docs/: index.mdx
website/src/content/docs/development/: building.md  contributing.md  design.md  testing.md
website/src/content/docs/getting-started/: installation.mdx  introduction.mdx  quickstart.mdx
website/src/content/docs/kernel/: api.md  architecture.md  drivers.md  porting.md
website/src/content/docs/language/: device-headers.md  driver-code.md  grammar.md  overview.mdx  spec.md  stdlib.md
website/src/content/docs/reference/: changelog.md  faq.md  performance.md  thesis.md  upstreaming.md
website/src/content/docs/toolchain/: compiler.md  editors.md  kdality.md
website/src/styles/: custom.css
